<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/northBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/north"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/eastBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="175dp"
        android:text="@string/east"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/northBtn" />

    <Button
        android:id="@+id/westBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="175dp"
        android:text="@string/west"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/northBtn" />

    <Button
        android:id="@+id/southBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:layout_marginBottom="80dp"
        android:text="@string/south"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/northBtn"
        app:layout_constraintBottom_toTopOf="@+id/overBtn"/>

    <FrameLayout
        android:id="@+id/f_status"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </FrameLayout>

    <FrameLayout
        android:id="@+id/f_area"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/northBtn"
        app:layout_constraintLeft_toRightOf="@id/westBtn"
        app:layout_constraintRight_toLeftOf="@id/eastBtn"
        app:layout_constraintBottom_toTopOf="@id/southBtn">
    </FrameLayout>

    <Button
        android:id="@+id/optBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/options"
        app:layout_constraintBottom_toTopOf="@id/f_status"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/overBtn"/>

    <Button
        android:id="@+id/overBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/overview"
        app:layout_constraintBottom_toTopOf="@id/f_status"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/invBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inv"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/f_status"
        app:layout_constraintLeft_toRightOf="@+id/overBtn"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>